# nomad_workflow_recreator

./: .env.example  CITATIONS.md  CLAUDE.md  README.md  SCHEMA.md  SIMILARITY_ALGORITHM.md  analysis_prompt.md  analyze_and_populate.py  claude_config.json  claude_session.json  cluster_size_relationships.py  create_metadata.py  docker-compose-mcp.yml  docker-compose.yml  enhance_cluster_relationships.py  examine_formulas.py  find_cluster_variations.py  fix_relationships.py  interactive_analysis.py  investigate_relationships.py  mcp_servers.sh  periodic_trends_summary.py  pyproject.toml  query_graph.py  quick_queries.py  requirements.txt  review_suggestions.py  run_analysis.sh  setup_claude_analysis.py
docs/: ai_workflow_analysis.md  enhanced_mcp_tools.md  pagination_and_optimization.md
examples/: workflow_reconstruction_example.py
reference/: nomad_api_docs.html  nomad_openapi.json  nomad_openapi_formatted.json
src/: claude_orchestrator.py  logger_server.py  memgraph_server.py  memgraph_server_enhanced.py  nomad_server.py  nomad_server_enhanced.py  nomad_server_improved.py  workflow_orchestrator.py
src/deprecated/: README.md  claude_orchestrator.py  workflow_orchestrator.py
